@@ -7,6 +7,8 @@ class MailBuilder(DexterityBuilder):
     portal_type = 'ftw.mail.mail'
 
     def with_message(self, data, contentType=u'message/rfc822', filename=u'message.eml'):
+        if isinstance(data, file):
+            data = data.read()
         self.arguments["message"] = NamedBlobFile(
             data=data, contentType=contentType, filename=filename)
         return self
