@@ -1,0 +1,10 @@
+MIME-Version: 1.0
+Content-Type: text/plain; charset="iso-8859-1"
+Content-Transfer-Encoding: quoted-printable
+To: =?iso-8859-1?q?Friedrich_H=F6lderlin?= <to@example.org>
+From: from@example.org
+Subject: =?iso-8859-1?q?Die_B=FCrgschaft?=
+Date: Wed, 28 Aug 2010 18:50:04 +0200 (CEST)
+Message-Id: <1>
+
+Text
